use global ignoredUris for all issue providers